dev/igw.tf
# resource "aws_internet_gateway" "terraform-ec2-igw" {
#   vpc_id = module.vpc.vpc_id
# }
